--- a/alembic.ini
+++ b/alembic.ini
@@ -16,7 +16,7 @@ file_template = %%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(re
 # sys.path path, will be prepended to sys.path if present.
 # defaults to the current working directory.  for multiple paths, the path separator
 # is defined by "path_separator" below.
-prepend_sys_path = . src
+prepend_sys_path = src
 
 # timezone to use when rendering the date within the migration file
 # as well as the filename.
