--- a/docker/storage.compose.yaml
+++ b/docker/storage.compose.yaml
@@ -6,6 +6,8 @@ services:
       POSTGRES_DB: ${DB_NAME}
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
+    ports:
+      - 5432:5432
     volumes:
       - postgres-data:/var/lib/postgresql/data/
     
