--- a/docker/app.compose.yaml
+++ b/docker/app.compose.yaml
@@ -2,7 +2,7 @@ services:
   backend:
     build: ..
     restart: unless-stopped
-    command: sh /app/start_api.sh
+    command: sh /app/start_http_server.sh
     env_file:
       - ../.env
     environment:
