chore: Добавлена переменная окружения для секретного ключа

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 API_MAP_PORT=8000  # Порт для запуска API
+SECRET_KEY=""  # Секретный ключ (Для подписания JWT токенов)
 
 DBMS_HOST=""
 DBMS_PORT=""
