--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "fastapi[standard]>=0.116.2",
     "phonenumberslite>=9.0.14",
     "pydantic-settings>=2.10.1",
+    "pyjwt>=2.10.1",
     "sqlalchemy>=2.0.43",
     "uvicorn[standard]>=0.35.0",
 ]
