--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "alembic>=1.16.5",
     "asyncpg>=0.30.0",
     "dishka>=1.7.1",
+    "email-validator>=2.3.0",
     "fastapi[standard]>=0.116.2",
     "phonenumberslite>=9.0.14",
     "pydantic-settings>=2.10.1",
