--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "alembic>=1.16.5",
+    "asyncclick>=8.2.2.2",
     "asyncpg>=0.30.0",
     "dishka>=1.7.1",
     "email-validator>=2.3.0",
