fix: Использование bcrypt для хэширования паролей

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "alembic>=1.16.5",
     "asyncclick>=8.2.2.2",
     "asyncpg>=0.30.0",
+    "bcrypt>=5.0.0",
     "dishka>=1.7.1",
     "email-validator>=2.3.0",
     "environs>=14.3.0",
