--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aiobotocore>=2.24.2",
     "alembic>=1.16.5",
     "asyncclick>=8.2.2.2",
     "asyncpg>=0.30.0",
@@ -15,7 +16,9 @@ dependencies = [
     "fastapi[standard]>=0.116.2",
     "phonenumberslite>=9.0.14",
     "pyjwt>=2.10.1",
+    "python-magic>=0.4.27",
     "sqlalchemy>=2.0.43",
+    "types-aiobotocore-lite[essential]>=2.24.2",
     "uvicorn[standard]>=0.35.0",
 ]
 
